\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.4-0}{
  \itemize{
    \item Replace .[terms call in predict.coxph with drop.term();
    due to an error in [.term discovered by Jorge Menezes.  Add
    dropterm.R to the test suite.
    \item Fix all errors in R CMD check, and submit to CRAN
}}
\section{Changes in version 3.3-2}{
  \itemize{
    \item Error in concordance(fit, newdata) if newdata had missing
    values: the derived x and y could be different lengths.
    \item Add test cases for the (rather difficult) case of predicted
    survival for multi-state coxph model that has shared hazards
    \item nsk(..., Boundary.knots=FALSE) was not being handled properly.
    \item Fix error in terms.inner; it failed for a function with no
    arguments. Pointed out by Daniel Sjberg and Duncan Murdoch.
    \item Remove Sint from C code.
    \item anova.coxph sometimes used P(>Chi) and somtimes Pr(>Chi) as a
    printout label, depending on the argument; the base packages all use
    "Pr".  Changed this to be consistent.
}}
\section{Changes in version 3.3-1}{
  \itemize{
    \item Update the saved tests/Examples/survival-Ex.Rout.save file so
    as to remove timings, at the behest of CRAN.  (Footnote 21 in the
    packages manual talks about this.)
}}
\section{Changes in version 3.3-0}{
  \itemize{
    \item Change any calls to Calloc or Free in the C code to R_Calloc
    and R_Free, at the request of R core.
    \item Fix an oversight in aareg: when coxph and survreg were
    converted from using +cluster() in a formula to cluster as an
    argument, that same change needed to be made in aareg.  Pointed out
    by zdgager.
    \item The std of the cumulative hazard is now present, for select
    cases of a coxph model curve.  More work remains to be done to
    return the std for all cases.
    \item Add a paragraph to the help page for survfit.Rd, pointing out
    that robust variance is now the default for interval censored data,