@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2021-02-16 r80015) -- "Unsuffered Consequences"
-Copyright (C) 2021 The R Foundation for Statistical Computing
+R Under development (unstable) (2022-08-09 r82699) -- "Unsuffered Consequences"
+Copyright (C) 2022 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -80,6 +80,16 @@ Type 'q()' to quit R.
 > all.equal(surv1$surv, surv2$surv)
 [1] TRUE
 > 
+> # And a model with only offsets.
+> eta <- cbind(lung$age, lung$ph.ecog) %*% coef(fit1)
+> fit3 <- coxph(Surv(time, status) ~ offset(eta), lung)
+> aeq(fit3$log, fit1$log[2])
+[1] TRUE
+> 
+> surv3 <- survfit(fit3, newdata=data.frame(eta= 50*fit1$coef[1] + fit1$coef[2]))
+> all.equal(surv3$surv, surv1$surv)
+[1] TRUE
+> 
 > #
 > # Check out the start.time option
 > #
@@ -93,4 +103,4 @@ Type 'q()' to quit R.
 > 
 > proc.time()
    user  system elapsed 
-  0.900   0.048   0.939 
+  1.329   0.197   1.538 
